objects/Loop__DDP__c.object
<CustomObject>
    <fields>
        <fullName>Loop__Time__c</fullName>
        <label>Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12AM</fullName>
                </value>
                <value>
                    <fullName>1AM</fullName>
                </value>
                <value>
                    <fullName>2AM</fullName>
                </value>
                <value>
                    <fullName>3AM</fullName>
                </value>
                <value>
                    <fullName>4AM</fullName>
                </value>
                <value>
                    <fullName>5AM</fullName>
                </value>
                <value>
                    <fullName>6AM</fullName>
                </value>
                <value>
                    <fullName>7AM</fullName>
                </value>
                <value>
                    <fullName>8AM</fullName>
                </value>
                <value>
                    <fullName>9AM</fullName>
                </value>
                <value>
                    <fullName>10AM</fullName>
                </value>
                <value>
                    <fullName>11AM</fullName>
                </value>
                <value>
                    <fullName>12PM</fullName>
                </value>
                <value>
                    <fullName>1PM</fullName>
                </value>
                <value>
                    <fullName>2PM</fullName>
                </value>
                <value>
                    <fullName>3PM</fullName>
                </value>
                <value>
                    <fullName>4PM</fullName>
                </value>
                <value>
                    <fullName>5PM</fullName>
                </value>
                <value>
                    <fullName>6PM</fullName>
                </value>
                <value>
                    <fullName>7PM</fullName>
                </value>
                <value>
                    <fullName>8PM</fullName>
                </value>
                <value>
                    <fullName>9PM</fullName>
                </value>
                <value>
                    <fullName>10PM</fullName>
                </value>
                <value>
                    <fullName>11PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Service Agreement</fullName>
                </value>
                <value>
                    <fullName>Legal Agreement</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Account Plan Summary</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Product Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__WorkspaceId__c</fullName>
        <label>WorkspaceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__WorkspaceName__c</fullName>
        <label>WorkspaceName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DocGen Package</label>
    <listViews>
        <fullName>Continuation_Letter</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Loop__Output_Filename__c</columns>
        <columns>Loop__Description__c</columns>
        <columns>Loop__Filter__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Continuation Letter</value>
        </filters>
        <label>Continuation Letter</label>
    </listViews>
    <listViews>
        <fullName>Loop__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Loop__Output_Filename__c</columns>
        <columns>Loop__Description__c</columns>
        <columns>Loop__Filter__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Managed_Service_Terms</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Loop__Output_Filename__c</columns>
        <columns>Loop__Description__c</columns>
        <columns>Loop__Filter__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Managed Service Terms</value>
        </filters>
        <label>Managed Service Terms</label>
    </listViews>
    <listViews>
        <fullName>Master_Agreement</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Loop__Output_Filename__c</columns>
        <columns>Loop__Description__c</columns>
        <columns>Loop__Filter__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Master</value>
        </filters>
        <label>Master Agreement</label>
    </listViews>
    <listViews>
        <fullName>NDA</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Loop__Output_Filename__c</columns>
        <columns>Loop__Description__c</columns>
        <columns>Loop__Filter__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>NDA</value>
        </filters>
        <label>NDA</label>
    </listViews>
    <listViews>
        <fullName>Order_Form</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Loop__Output_Filename__c</columns>
        <columns>Loop__Description__c</columns>
        <columns>Loop__Filter__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Order Form</value>
        </filters>
        <label>Order Form</label>
    </listViews>
    <listViews>
        <fullName>Preview</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Loop__Output_Filename__c</columns>
        <columns>Loop__Description__c</columns>
        <columns>Loop__Filter__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Loop__Filter__c</field>
            <operation>contains</operation>
            <value>Preview</value>
        </filters>
        <label>Preview</label>
    </listViews>
    <listViews>
        <fullName>Quote</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Loop__Output_Filename__c</columns>
        <columns>Loop__Description__c</columns>
        <columns>Loop__Filter__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Quote</value>
        </filters>
        <label>Quote</label>
    </listViews>
    <listViews>
        <fullName>Redline</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Loop__Output_Filename__c</columns>
        <columns>Loop__Description__c</columns>
        <columns>Loop__Filter__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Loop__Filter__c</field>
            <operation>contains</operation>
            <value>Redline</value>
        </filters>
        <label>Redline</label>
    </listViews>
    <listViews>
        <fullName>Secure</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Loop__Output_Filename__c</columns>
        <columns>Loop__Description__c</columns>
        <columns>Loop__Filter__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Loop__Filter__c</field>
            <operation>contains</operation>
            <value>Secure</value>
        </filters>
        <label>Secure</label>
    </listViews>
    <listViews>
        <fullName>Trial</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Loop__Output_Filename__c</columns>
        <columns>Loop__Description__c</columns>
        <columns>Loop__Filter__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Trial</value>
        </filters>
        <label>Trial</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocGen Packages</pluralLabel>
    <recordTypes>
        <fullName>Loop__API</fullName>
        <active>false</active>
        <label>API</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__Account</fullName>
        <active>true</active>
        <description>DocGen Package will be available from an Account only</description>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__Case</fullName>
        <active>true</active>
        <description>DocGen Package will be available from a Case only</description>
        <label>Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__Contact</fullName>
        <active>true</active>
        <description>DocGen Package will be available from a Contact only</description>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__Contract</fullName>
        <active>true</active>
        <description>DocGen Package will be available from a Contract only</description>
        <label>Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__Custom_Object</fullName>
        <active>true</active>
        <description>DocGen Package will be available from a custom object only</description>
        <label>Custom Object</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__Form</fullName>
        <active>true</active>
        <description>DocGen Package will be available as a form</description>
        <label>Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__Lead</fullName>
        <active>true</active>
        <description>DocGen Package will be available from a Lead only</description>
        <label>Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__Nintex_Form</fullName>
        <active>true</active>
        <description>DocGen Package will be available only for Nintex Forms</description>
        <label>Nintex Form (Deprecated)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__Opportunity</fullName>
        <active>true</active>
        <description>DocGen Package will be available from an Opportunity only</description>
        <label>Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__Quote</fullName>
        <active>true</active>
        <description>DocGen Package will be available from a Quote only</description>
        <label>Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__Report</fullName>
        <active>true</active>
        <description>DocGen Package will be available as an automated email only</description>
        <label>Report</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>